kubernetes-networks/web-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
  - name: web
    image: soapj/otus.homework1.kubernetes-intro.web:latest
    livenessProbe:
      tcpSocket:
        port: 8000
    readinessProbe:
      httpGet:
        path: /index.html
        port: 8000
    volumeMounts:
    - name: app
      mountPath: /app
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "64Mi"
        cpu: "250m"
  volumes:
    - name: app
      emptyDir: {}
